--- a/container/public/index.html
+++ b/container/public/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <h2>Products</h2>
-    <div id="dev-products"></div>
+    <div id="my-products"></div>
     <br />
     <h2>Cart</h2>
-    <div id="dev-cart"></div>
+    <div id="my-cart"></div>
   </body>
 </html>
